Name:                net-socket
Version:             0.1.0
Synopsis:            socket
Description:         socket
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            net
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-net
Cabal-Version:       >=1.8
extra-source-files:  README.md

Library
  Exposed-modules:   Net.Socket
                   , Net.Socket.Address
                   , Net.Socket.System
  Other-modules:     Net.Socket.System.Internal
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , net-types
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-net
