Name:                net
Version:             0.1.0
Synopsis:            Network
Description:         Network
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          nicolas@di-prima.fr vincent@snarc.org
Category:            net
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-net
Cabal-Version:       >=1.8
extra-source-files:  README.md

Library
  Exposed-modules:   Net.Types
                   , Net.Socket
                   , Net.Socket.Address
                   , Net.Socket.System
  Other-modules:     Net.Socket.System.Internal
  Build-depends:     base >= 4 && < 5
                   , bytestring
  ghc-options:       -Wall -fwarn-tabs

Test-Suite test-net
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , QuickCheck >= 2
                   , tasty
                   , tasty-quickcheck
                   , tasty-hunit
                   , net
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

Executable server
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , net
  ghc-options:       -Wall
  Main-Is:           Server.hs
  Hs-Source-Dirs:    tests
  default-language:  Haskell2010

Executable client
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , net
  ghc-options:       -Wall
  Main-Is:           Client.hs
  Hs-Source-Dirs:    tests
  default-language:  Haskell2010

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-net
