Name:                net-types
Version:             0.1.0
Synopsis:            network types
Description:         Basic and common network types
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            net-types
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-net
Cabal-Version:       >=1.10
extra-source-files:  README.md

Library
  Exposed-modules:   Net.Types
  default-language:  Haskell2010
  Build-depends:     base >= 4 && < 5
                   , bytestring
  ghc-options:       -Wall -fwarn-tabs

Test-Suite test-net-types
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , QuickCheck >= 2
                   , tasty
                   , tasty-quickcheck
                   , tasty-hunit
                   , net-types
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-net
