Name:                net-uri
Version:             0.1.0
Synopsis:            URI
Description:         URI
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            net
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-net
Cabal-Version:       >=1.8
extra-source-files:  README.md

Library
  Exposed-modules:   Net.URI
  Build-depends:     base >= 4 && < 5
                   , parsec >= 3.1.0
  ghc-options:       -Wall -fwarn-tabs

Test-Suite test-uri
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , mtl
                   , net-uri
                   , QuickCheck >= 2
                   , HUnit
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-net
